--- a/index.html
+++ b/index.html
@@ -1,12 +1,108 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    
-</body>
+<html lang="en ru">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Веб студаия</title>
+  </head>
+  <body>
+    <header>
+      <nav>
+        <span>WebStudio</span>
+        <ul>
+          <li><a href="">Студия</a></li>
+          <li><a href="">Портфолио</a></li>
+          <li><a href="">Контакты</a></li>
+        </ul>
+        <ul>
+          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+          <li><a href="tel:+38 096 111 11 11">+38 096 111 11 11</a></li>
+        </ul>
+      </nav>
+    </header>
+    <div>
+      <section>
+        <h1>Эффективные решения для вашего бизнеса</h1>
+        <a href="">Заказать услугу</a>
+      </section>
+    </div>
+    <section>
+      <ul>
+        <li>
+          <h3>Внимание к деталям</h3>
+          <p>
+            Идейные соображения, а также начало повседневной работы по
+            формированию позиции.
+          </p>
+        </li>
+        <li>
+          <h3>Пунктуальность</h3>
+          <p>
+            Задача организации, в особенности же рамки и место обучения кадров
+            влечет за собой.
+          </p>
+        </li>
+        <li>
+          <h3>Планирование</h3>
+          <p>
+            Равным образом консультация с широким активом в значительной степени
+            обуславливает.
+          </p>
+        </li>
+        <li>
+          <h3>Современные технологии</h3>
+          <p>
+            Значимость этих проблем настолько очевидна, что реализация плановых
+            заданий.
+          </p>
+        </li>
+      </ul>
+    </section>
+    <main>
+      <h2>Чем мы занимаемся</h2>
+      <img src="/images/box 1.jpg" alt="" />
+      <img src="/images/box 2.jpg" alt="" />
+      <img src="/images/box 3.jpg" alt="" />
+    </main>
+    <div>
+      <h2>Наша команда</h2>
+      <figure>
+        <img src="/images/igor.jpg" alt="" width="270" height="260" />
+        <figcaption>
+          <p>Игорь Демьяненко</p>
+          <p>Product Designer</p>
+        </figcaption>
+      </figure>
+      <figure>
+        <img src="/images/olga.jpg" alt="" width="270" height="260" />
+        <figcaption>
+          <p>Ольга Репина</p>
+          <p>Frontend Developer</p>
+        </figcaption>
+      </figure>
+      <figure>
+        <img src="/images/nikolai.jpg" alt="" width="270" height="260" />
+        <figcaption>
+          <p>Николай Тарасов</p>
+          <p>Marketing</p>
+        </figcaption>
+      </figure>
+      <figure>
+        <img src="/images/mihail.jpg" alt="" width="270" height="260" />
+        <figcaption>
+          <p>Михаил Ермаков</p>
+          <p>UI Designer</p>
+        </figcaption>
+      </figure>
+    </div>
+    <footer>
+      <span>WebStudio</span>
+      <address>г. Киев, пр-т Леси Украинки, 26</address>
+      <ul>
+        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+        <li><a href="tel:+38 096 111 11 11">+38 096 111 11 11</a></li>
+      </ul>
+    </footer>
+  </body>
 </html>
