--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en-ru">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -21,12 +21,12 @@
         </ul>
       </nav>
     </header>
-    <div>
-      <section>
-        <h1>Эффективные решения для вашего бизнеса</h1>
-        <a href="">Заказать услугу</a>
-      </section>
-    </div>
+
+    <section>
+      <h1>Эффективные решения для вашего бизнеса</h1>
+      <a href="">Заказать услугу</a>
+    </section>
+
     <section>
       <ul>
         <li>
@@ -61,35 +61,55 @@
     </section>
     <main>
       <h2>Чем мы занимаемся</h2>
-      <img src="/images/box 1.jpg" alt="" />
-      <img src="/images/box 2.jpg" alt="" />
-      <img src="/images/box 3.jpg" alt="" />
+      <img src="/images/box 1.jpg" alt="Бокс 1" />
+      <img src="/images/box 2.jpg" alt="Бокс 2" />
+      <img src="/images/box 3.jpg" alt="Бокс 3" />
     </main>
     <div>
       <h2>Наша команда</h2>
       <figure>
-        <img src="/images/igor.jpg" alt="" width="270" height="260" />
+        <img
+          src="/images/igor.jpg"
+          alt="Игорь Демьяненко Product Designer"
+          width="270"
+          height="260"
+        />
         <figcaption>
           <p>Игорь Демьяненко</p>
           <p>Product Designer</p>
         </figcaption>
       </figure>
       <figure>
-        <img src="/images/olga.jpg" alt="" width="270" height="260" />
+        <img
+          src="/images/olga.jpg"
+          alt="Ольга Репина Frontend Developer"
+          width="270"
+          height="260"
+        />
         <figcaption>
           <p>Ольга Репина</p>
           <p>Frontend Developer</p>
         </figcaption>
       </figure>
       <figure>
-        <img src="/images/nikolai.jpg" alt="" width="270" height="260" />
+        <img
+          src="/images/nikolai.jpg"
+          alt="Николай Тарасов Marketing"
+          width="270"
+          height="260"
+        />
         <figcaption>
           <p>Николай Тарасов</p>
           <p>Marketing</p>
         </figcaption>
       </figure>
       <figure>
-        <img src="/images/mihail.jpg" alt="" width="270" height="260" />
+        <img
+          src="/images/mihail.jpg"
+          alt="Михаил Ермаков UI Designer "
+          width="270"
+          height="260"
+        />
         <figcaption>
           <p>Михаил Ермаков</p>
           <p>UI Designer</p>
