заменил расширение картинок

--- a/index.html
+++ b/index.html
@@ -61,15 +61,15 @@
     </section>
     <main>
       <h2>Чем мы занимаемся</h2>
-      <img src="/images/box1.jpg" alt="Бокс 1" />
-      <img src="/images/box2.jpg" alt="Бокс 2" />
-      <img src="/images/box3.jpg" alt="Бокс 3" />
+      <img src="/images/box1.png" alt="Бокс 1" />
+      <img src="/images/box2.png" alt="Бокс 2" />
+      <img src="/images/box3.png" alt="Бокс 3" />
     </main>
     <div>
       <h2>Наша команда</h2>
       <figure>
         <img
-          src="/images/igor.jpg"
+          src="/images/Igor.png"
           alt="Игорь Демьяненко Product Designer"
           width="270"
           height="260"
@@ -81,7 +81,7 @@
       </figure>
       <figure>
         <img
-          src="/images/olga.jpg"
+          src="/images/olga.png"
           alt="Ольга Репина Frontend Developer"
           width="270"
           height="260"
@@ -93,7 +93,7 @@
       </figure>
       <figure>
         <img
-          src="/images/nikolai.jpg"
+          src="/images/nikolai.png"
           alt="Николай Тарасов Marketing"
           width="270"
           height="260"
