--- a/index.html
+++ b/index.html
@@ -9,116 +9,127 @@
   <body>
     <header>
       <nav>
-        <span>WebStudio</span>
+        <a href="/index.html">WebStudio</a>
         <ul>
           <li><a href="">Студия</a></li>
           <li><a href="">Портфолио</a></li>
           <li><a href="">Контакты</a></li>
         </ul>
-        <ul>
-          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
-        </ul>
       </nav>
+      <ul>
+        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+        <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+      </ul>
     </header>
 
-    <section>
-      <h1>Эффективные решения для вашего бизнеса</h1>
-      <a href="">Заказать услугу</a>
-    </section>
-
-    <section>
-      <ul>
-        <li>
-          <h3>Внимание к деталям</h3>
-          <p>
-            Идейные соображения, а также начало повседневной работы по
-            формированию позиции.
-          </p>
-        </li>
-        <li>
-          <h3>Пунктуальность</h3>
-          <p>
-            Задача организации, в особенности же рамки и место обучения кадров
-            влечет за собой.
-          </p>
-        </li>
-        <li>
-          <h3>Планирование</h3>
-          <p>
-            Равным образом консультация с широким активом в значительной степени
-            обуславливает.
-          </p>
-        </li>
-        <li>
-          <h3>Современные технологии</h3>
-          <p>
-            Значимость этих проблем настолько очевидна, что реализация плановых
-            заданий.
-          </p>
-        </li>
-      </ul>
-    </section>
     <main>
-      <h2>Чем мы занимаемся</h2>
-      <img src="/images/box1.png" alt="Бокс 1" />
-      <img src="/images/box2.png" alt="Бокс 2" />
-      <img src="/images/box3.png" alt="Бокс 3" />
+      <!--Hero-->
+      <section>
+        <h1>Эффективные решения для вашего бизнеса</h1>
+        <button type="button">Заказать услугу</button>
+      </section>
+      <!-- our qualities-->
+      <section>
+        <h2 hidden>Качаства</h2>
+        <ul>
+          <li>
+            <h3>Внимание к деталям</h3>
+            <p>
+              Идейные соображения, а также начало повседневной работы по
+              формированию позиции.
+            </p>
+          </li>
+          <li>
+            <h3>Пунктуальность</h3>
+            <p>
+              Задача организации, в особенности же рамки и место обучения кадров
+              влечет за собой.
+            </p>
+          </li>
+          <li>
+            <h3>Планирование</h3>
+            <p>
+              Равным образом консультация с широким активом в значительной
+              степени обуславливает.
+            </p>
+          </li>
+          <li>
+            <h3>Современные технологии</h3>
+            <p>
+              Значимость этих проблем настолько очевидна, что реализация
+              плановых заданий.
+            </p>
+          </li>
+        </ul>
+      </section>
+      <section>
+        <h2>Чем мы занимаемся</h2>
+        <ul>
+          <li>
+            <img src="/images/box1.png" alt="Бокс 1" width="370" height="294" />
+          </li>
+          <li>
+            <img src="/images/box2.png" alt="Бокс 2" width="370" height="294" />
+          </li>
+          <li>
+            <img src="/images/box3.png" alt="Бокс 3" width="370" height="294" />
+          </li>
+        </ul>
+      </section>
+      <!--Team-->
+      <section>
+        <h2>Наша команда</h2>
+        <ul>
+          <li>
+            <img
+              src="/images/Igor.png"
+              alt="Игорь Демьяненко Product Designerim"
+              width="270"
+              height="260"
+            />
+            <p>Игорь Демьяненко</p>
+            <p>Product Designer</p>
+          </li>
+          <li>
+            <img
+              src="/images/olga.png"
+              alt="Ольга Репина Frontend Developerim"
+              width="270"
+              height="260"
+            />
+            <p>Ольга Репина</p>
+            <p>Frontend Developer</p>
+          </li>
+          <li>
+            <img
+              src="/images/nikolai.png"
+              alt="Николай Тарасов Marketingim"
+              width="270"
+              height="260"
+            />
+            <p>Николай Тарасов</p>
+            <p>Marketing</p>
+          </li>
+          <li>
+            <img
+              src="/images/mihail.png"
+              alt="Михаил Ермаков UI Designerim"
+              width="270"
+              height="260"
+            />
+            <p>Михаил Ермаков</p>
+            <p>UI Designer</p>
+          </li>
+        </ul>
+      </section>
     </main>
-    <div>
-      <h2>Наша команда</h2>
-      <figure>
-        <img
-          src="/images/Igor.png"
-          alt="Игорь Демьяненко Product Designer"
-          width="270"
-          height="260"
-        />
-        <figcaption>
-          <p>Игорь Демьяненко</p>
-          <p>Product Designer</p>
-        </figcaption>
-      </figure>
-      <figure>
-        <img
-          src="/images/olga.png"
-          alt="Ольга Репина Frontend Developer"
-          width="270"
-          height="260"
-        />
-        <figcaption>
-          <p>Ольга Репина</p>
-          <p>Frontend Developer</p>
-        </figcaption>
-      </figure>
-      <figure>
-        <img
-          src="/images/nikolai.png"
-          alt="Николай Тарасов Marketing"
-          width="270"
-          height="260"
-        />
-        <figcaption>
-          <p>Николай Тарасов</p>
-          <p>Marketing</p>
-        </figcaption>
-      </figure>
-      <figure>
-        <img
-          src="/images/mihail.jpg"
-          alt="Михаил Ермаков UI Designer "
-          width="270"
-          height="260"
-        />
-        <figcaption>
-          <p>Михаил Ермаков</p>
-          <p>UI Designer</p>
-        </figcaption>
-      </figure>
-    </div>
     <footer>
-      <span>WebStudio</span>
-      <address>г. Киев, пр-т Леси Украинки, 26</address>
+      <a href="/index.html">WebStudio</a>
+      <address>
+        <a href="https://goo.gl/maps/austRMBX4qjxkUq26"
+          >г. Киев, пр-т Леси Украинки, 26</a
+        >
+      </address>
       <ul>
         <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
         <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
