Сделал правки, заменил формат картинок

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       </section>
       <!-- our qualities-->
       <section>
-        <h2 hidden>Качаства</h2>
+        <h2 class="visually-hidden">Качаства</h2>
         <ul>
           <li>
             <h3>Внимание к деталям</h3>
@@ -66,13 +66,13 @@
         <h2>Чем мы занимаемся</h2>
         <ul>
           <li>
-            <img src="/images/box1.png" alt="Бокс 1" width="370" height="294" />
+            <img src="images/box1.jpg" alt="Бокс 1" width="370" height="294" />
           </li>
           <li>
-            <img src="/images/box2.png" alt="Бокс 2" width="370" height="294" />
+            <img src="images/box2.jpg" alt="Бокс 2" width="370" height="294" />
           </li>
           <li>
-            <img src="/images/box3.png" alt="Бокс 3" width="370" height="294" />
+            <img src="images/box3.jpg" alt="Бокс 3" width="370" height="294" />
           </li>
         </ul>
       </section>
@@ -82,42 +82,42 @@
         <ul>
           <li>
             <img
-              src="/images/Igor.png"
+              src="images/Igor.jpg"
               alt="Игорь Демьяненко Product Designerim"
               width="270"
               height="260"
             />
-            <p>Игорь Демьяненко</p>
+            <h3>Игорь Демьяненко</h3>
             <p>Product Designer</p>
           </li>
           <li>
             <img
-              src="/images/olga.png"
+              src="images/olga.jpg"
               alt="Ольга Репина Frontend Developerim"
               width="270"
               height="260"
             />
-            <p>Ольга Репина</p>
+            <h3>Ольга Репина</h3>
             <p>Frontend Developer</p>
           </li>
           <li>
             <img
-              src="/images/nikolai.png"
+              src="images/nikolai.jpg"
               alt="Николай Тарасов Marketingim"
               width="270"
               height="260"
             />
-            <p>Николай Тарасов</p>
+            <h3>Николай Тарасов</h3>
             <p>Marketing</p>
           </li>
           <li>
             <img
-              src="/images/mihail.png"
+              src="images/mihail.jpg"
               alt="Михаил Ермаков UI Designerim"
               width="270"
               height="260"
             />
-            <p>Михаил Ермаков</p>
+            <h3>Михаил Ермаков</h3>
             <p>UI Designer</p>
           </li>
         </ul>
@@ -129,11 +129,11 @@
         <a href="https://goo.gl/maps/austRMBX4qjxkUq26"
           >г. Киев, пр-т Леси Украинки, 26</a
         >
+        <ul>
+          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+          <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+        </ul>
       </address>
-      <ul>
-        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
-      </ul>
     </footer>
   </body>
 </html>
