--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
         <ul>
           <li>
             <img
-              src="images/Igor.jpg"
+              src="images/igor.jpg"
               alt="Игорь Демьяненко Product Designerim"
               width="270"
               height="260"
