--- a/index.html
+++ b/index.html
@@ -127,8 +127,8 @@
       <a href="/index.html">WebStudio</a>
       <address>
         <a href="https://goo.gl/maps/austRMBX4qjxkUq26"
-          >г. Киев, пр-т Леси Украинки, 26</a
-        >
+          >г. Киев, пр-т Леси Украинки, 26
+        </a>
         <ul>
           <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
           <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
